@@ -80,6 +80,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   cleanly if database connections fail unpleasantly.
 * (bug 12028) Add Special:Listbots as shortcut for Special:Listusers/bot
 * (bug 9633) Add a predefined list of delete reasons to the deletion form
+* Show a warning message when creating/editing a user (talk) page but the user
+  does not exists
 
 === Bug fixes in 1.12 ===
 
